--- a/02_sample/02_Roysha-bem/style.css
+++ b/02_sample/02_Roysha-bem/style.css
@@ -1,11 +1,70 @@
 @charset "utf-8";
 
+/* base */
 body {
     color: #6C6C6F;
     font-size: 16px;
     font-family: Helvetica, Arial, sans-serif;
     line-height: 1.75;
     letter-spacing: 0;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: bottom;
+}
+
+
+
+/* header */
+header {
+    padding: 30px 0;
+    background-color: #123D88;
+}
+
+.header__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header__logo {
+    line-height: 1;
+}
+
+/* index */
+/* features */
+.features {
+    padding: 80px;
+}
+
+.features__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.features__info {
+    width: 46%;
+}
+
+.features__list {
+    width: 46%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.features__item {
+    width: 40%;
+    margin-bottom: 70px
 }
 
 .btn {
@@ -19,8 +78,180 @@ body {
     letter-spacing: 0.0025em;
     text-align: center;
     border-radius: 27.5px;
+    margin-top: 60px;
 }
 
+/* unit */
+.unit__catch {
+    color: #256BE6;
+    font-size: 14px;
+    letter-spacing: 0.05em;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    /*英語を大文字にする*/
+}
+
+.unit__title {
+    color: #262934;
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 1.3;
+    margin-bottom: 30px;
+}
+
+.unit__text {
+    margin-bottom: 40px;
+}
+
+.unit__center {
+    text-align: center;
+}
+
+/* card */
+.card__icon {
+    margin-bottom: 40px;
+}
+
+.card__title {
+    color: #2F2F35;
+    font-size: 27px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+
+
+.features__list {
+    margin-bottom: 70px;
+}
+
+/* payment */
+.payment {
+    padding: 80px 0;
+    background-color: #F7FAFF;
+}
+
+.payment__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.payment__info {
+    width: 46%;
+}
+
+.payment__pic {
+    width: 46%;
+}
+
+/* footer */
+footer {
+    background-color: #123D88;
+    padding: 32px;
+    text-align: right;
+}
+
+.footer__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer__copy {
+    font-size: 15px;
+    color: #FFFFFF;
+}
+
+/* service */
+/* wedo */
+.wedo {
+    padding: 80px 0;
+}
+
+.wedo__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wedo__info {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.wedo__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 60px;
+    background-color: #F7FAFF;
+}
+
+.wedo__item {
+    width: 30%;
+    background-color: #fff;
+    padding: 40px 0;
+    text-align: center;
+}
+
+.wedo__inner .btn {
+    margin-top: 40px;
+    width: 100%;
+    max-width: 200px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.wedo__inner .card__text {
+    margin-bottom: -20px;
+}
+
+
+/* offer */
+.offer {
+    padding: 80px 0;
+    background-color: #505050;
+}
+
+.offer__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.offer__info {
+    max-width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.offer__info .unit__title {
+    color: #fff;
+}
+
+.offer__info .btn {
+    background-color: #505050;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* help */
+
+/* modules */
 .btn--second {
     background-color: #2DBE61;
 }
@@ -28,3 +259,132 @@ body {
 .btn--warning {
     background-color: #F87624;
 }
+
+.btn--outline {
+    border: 1px solid #fff;
+}
+
+.transfer {
+    padding: 80px;
+}
+
+.transfer__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.transfer__info {
+    width: 100%;
+}
+
+.transfer__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.transfer__item {
+    width: 30%;
+    text-align: center;
+}
+
+/* question */
+.question {
+    padding: 80px 0;
+    background-color: #123D88;
+}
+
+.question__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.question__info {
+    max-width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.question__info .unit__title {
+    color: #fff;
+}
+
+.question__info .btn {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.transfer {
+    padding: 80px;
+    color: #6C6C6F;
+}
+
+.transfer__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.transfer__info {
+    max-width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
+
+
+.transfer__info .btn {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.asked {
+    padding: 80px;
+}
+
+.asked__inner {
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.asked__info {
+    width: 46%;
+}
+
+.asked__list {
+    width: 46%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.asked__item {
+    width: 40%;
+    border: 1px solid #6C6C6F;
+    padding: 40px;
+    text-align: center;
+    margin-bottom: 46px
+}
+
+.card__title:last-child {
+    margin-bottom: 0;
+}
+
+/*↑その要素が最後にある時だけ適応 */
