--- a/03_sample/05_SmartSpace-sass/css/style.css
+++ b/03_sample/05_SmartSpace-sass/css/style.css
@@ -9,7 +9,7 @@ body {
 img {
   max-width: 100%;
   height: auto;
-  vertical-align: center;
+  vertical-align: bottom;
 }
 
 /*header*/
@@ -39,7 +39,7 @@ img {
   align-items: center;
 }
 .header__li {
-  margin: 15px;
+  margin: 0 15px;
 }
 
 span {
@@ -48,6 +48,7 @@ span {
 
 /*main*/
 .smart__inner {
+  margin-bottom: 120px;
   max-width: 1000px;
   width: 90%;
   margin-left: auto;
@@ -63,6 +64,7 @@ span {
 
 .post__category {
   color: #FF9900;
+  font-weight: bold;
 }
 .post__title {
   color: #000000;
@@ -87,9 +89,99 @@ span {
 }
 
 .love__inner {
+  margin-bottom: 120px;
   max-width: 1000px;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.comment__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.comment__item {
+  width: 47%;
+  border: 1px solid #A3A3A3;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 45px 40px;
+}
+
+.card__icon {
+  display: flex;
+  margin-top: 80px;
+  align-items: center;
+}
+
+.info {
+  margin-left: 20px;
+}
+
+.footer {
+  font-weight: bold;
+  background-color: #DBFFFF;
+  padding: 100px;
+}
+.footer__inner {
+  max-width: 1000px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: right;
+}
+.footer__ul {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 40px;
+}
+.footer__li {
+  margin: 0 15px;
+}
+
+/*about*/
+.best__title {
+  color: #000000;
+  margin: 20px 0 40px;
+  line-height: 1.2083333333;
+  font-size: 48px;
+}
+.best__inner {
+  max-width: 1000px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 120px;
+}
+.best__top {
+  margin-bottom: 60px;
+}
+
+.card__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.card__item {
+  width: 30%;
+}
+.card__btn {
+  display: inline-block;
+  color: #FFFFFF;
+  width: 200px;
+  padding: 20px 33px;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: bold;
+  width: 100%;
+  background-color: #FF9900;
+  margin-top: 30px;
+}
+
+small {
+  font-size: 12px;
 }
 /*# sourceMappingURL=style.css.map */
