--- a/03_sample/05_SmartSpace-sass/css/style.scss
+++ b/03_sample/05_SmartSpace-sass/css/style.scss
@@ -2,12 +2,14 @@
 $color-text: #31353B;
 $color-accent: #FF9900;
 $color-title: #000000;
+$color-bg: #DBFFFF;
 
 @mixin inner($w: 90%, $mw: 1000px) {
     max-width: $mw;
     width: $w;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 @mixin flex($a: center, $j: space-between) {
@@ -44,7 +46,7 @@ body {
 img {
     max-width: 100%;
     height: auto;
-    vertical-align: center;
+    vertical-align: bottom;
 }
 
 /*header*/
@@ -66,7 +68,7 @@ img {
     }
 
     &__li {
-        margin: 15px;
+        margin: 0 15px;
     }
 }
 
@@ -77,6 +79,7 @@ span {
 /*main*/
 .smart {
     &__inner {
+        margin-bottom: 120px;
         @include inner();
         @include flex();
     }
@@ -87,8 +90,10 @@ span {
 }
 
 .post {
+
     &__category {
         color: $color-accent;
+        font-weight: bold
     }
 
     &__title {
@@ -109,6 +114,95 @@ span {
 
 .love {
     &__inner {
+        margin-bottom: 120px;
         @include inner();
     }
+}
+
+.comment {
+
+    &__list {
+        @include flex();
+    }
+
+    &__item {
+        width: 47%;
+        border: 1px solid #A3A3A3;
+        background-color: #fff;
+        border-radius: 10px;
+        padding: 45px 40px;
+    }
+}
+
+.card {
+    &__icon {
+        display: flex;
+        margin-top: 80px;
+        align-items: center;
+    }
+}
+
+.info {
+    margin-left: 20px;
+}
+
+.footer {
+    font-weight: bold;
+    background-color: $color-bg ;
+    padding: 100px;
+
+    &__inner {
+        @include inner();
+        text-align: right;
+    }
+
+    &__ul {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 40px;
+    }
+
+    &__li {
+        margin: 0 15px;
+    }
+}
+
+/*about*/
+
+
+.best {
+    &__title {
+        @include title();
+        font-size: 48px
+    }
+
+    &__inner {
+        @include inner();
+        margin-bottom: 120px
+    }
+
+    &__top {
+        margin-bottom: 60px;
+    }
+}
+
+.card {
+    &__list {
+        @include flex();
+    }
+
+    &__item {
+        width: 30%;
+    }
+
+    &__btn {
+        @include btn();
+        width: 100%;
+        background-color: $color-accent;
+        margin-top: 30px;
+    }
+}
+
+small {
+    font-size: 12px;
 }
