--- a/07_Mache-sass/css/style.css
+++ b/07_Mache-sass/css/style.css
@@ -21,6 +21,8 @@ img {
   position: fixed;
   width: 100%;
   font-weight: bold;
+  top: 0;
+  left: 0;
 }
 .header__inner {
   width: 90%;
@@ -148,6 +150,43 @@ img {
   -o-object-fit: cover;
      object-fit: cover;
   aspect-ratio: 16/9;
+}
+
+.service {
+  margin-top: 80px;
+}
+.service__inner {
+  width: 90%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.service__title {
+  font-size: 38px;
+  margin-bottom: 50px;
+}
+
+.test {
+  text-align: center;
+  padding: 80px 40px;
+  background: url(../images/bg_testimonials.png) no-repeat center center/cover;
+}
+.test__title {
+  font-size: 38px;
+  font-weight: bold;
+  color: #2B2B2B;
+  margin-bottom: 50px;
+}
+.test__contents {
+  padding: 50px;
+  background-color: #FFFFFF;
+  text-align: center;
+}
+.test__text {
+  margin: 37px 0 25px;
+}
+.test__name {
+  margin-bottom: 40px;
 }
 
 .footer {
