--- a/08_furnishop-sass/css/style.css
+++ b/08_furnishop-sass/css/style.css
@@ -97,18 +97,24 @@ img {
 @media screen and (min-width: 740px) {
   .about__item img {
     aspect-ratio: 1/1;
+    -o-object-position: center bottom;
+       object-position: center bottom;
   }
 }
 .about__item:last-child {
   margin-bottom: 0;
 }
 .about__title {
+  margin-bottom: 1.25em;
   font-size: 3rem;
   font-weight: bold;
-  border-bottom: 2px solid #244D4D;
-  margin-bottom: 1.25em;
-  margin-top: 1.6666666667em;
+  line-height: 1.2083333333;
   padding-bottom: 0.625em;
+  border-bottom: 2px solid;
+  margin-top: 1.6666666667em;
+}
+.about__list {
+  padding-bottom: 2.5em;
 }
 @media screen and (min-width: 740px) {
   .about__list {
@@ -147,18 +153,19 @@ img {
   margin-right: auto;
 }
 .products__title {
+  margin-bottom: 1.25em;
   font-size: 3rem;
   font-weight: bold;
-  border-bottom: 2px solid #244D4D;
-  margin-bottom: 1.25em;
-  margin-top: 2.5em;
+  line-height: 1.2083333333;
   padding-bottom: 0.625em;
+  border-bottom: 2px solid;
+  margin-top: 1.6666666667em;
 }
 .products__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
 }
 .products__item {
   text-align: center;
@@ -229,6 +236,14 @@ img {
 }
 .footer__contents:last-child {
   margin-bottom: 0;
+}
+@media screen and (min-width: 740px) {
+  .footer__contents {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-left: 3.75em;
+  }
 }
 .footer__address {
   margin: 2.5em 0 1.25em;
